--- a/css/header.css
+++ b/css/header.css
@@ -3,6 +3,10 @@
   min-height: 180px;
   border-bottom: 1px solid #e0e0e0;
   background: url("../img/header.jpg") left top repeat-x, #f3fafa; }
+  @media (max-width: 1009px) {
+    .header {
+      min-height: 0px;
+      background: #f3fafa; } }
   .header .miniature_block {
     top: 20px; }
   @media (max-width: 636px) {
@@ -20,7 +24,18 @@
     width: 36.06%; }
     @media (max-width: 1170px) {
       .header .header_nav {
-        width: 45%; } }
+        width: 39.6%; } }
+    @media (max-width: 1009px) {
+      .header .header_nav {
+        float: left;
+        width: 20%; } }
+    @media (max-width: 770px) {
+      .header .header_nav {
+        width: 50%; } }
+    @media (max-width: 355px) {
+      .header .header_nav {
+        width: 100%;
+        text-align: center; } }
     .header .header_nav nav {
       float: right; }
       @media (max-width: 859px) {
@@ -42,6 +57,9 @@
             font-weight: bold; }
             .header .header_nav nav ul li a:hover {
               color: #620909; }
+      @media (max-width: 1009px) {
+        .header .header_nav nav {
+          display: none; } }
     .header .header_nav_sandwich {
       display: inline-block;
       width: 26px;
@@ -49,6 +67,9 @@
       border: 1px solid #023d98;
       margin-top: 4px;
       box-sizing: border-box; }
+      @media (max-width: 1009px) {
+        .header .header_nav_sandwich {
+          display: none; } }
       .header .header_nav_sandwich:hover span {
         background: #4e070c; }
       @media (max-width: 636px) {
@@ -82,6 +103,10 @@
         @media (max-width: 568px) {
           .header .header_nav_logo_line_logo {
             margin-top: 5px; } }
+        @media (max-width: 355px) {
+          .header .header_nav_logo_line_logo {
+            display: inline-block;
+            float: none; } }
         .header .header_nav_logo_line_logo span {
           display: none; }
         .header .header_nav_logo_line_logo a {
@@ -91,12 +116,15 @@
           padding-left: 15px;
           margin-top: 15px;
           letter-spacing: 0.7px; }
-          @media (max-width: 636px) {
-            .header .header_nav_logo_line_logo a {
-              font-size: 22px; } }
-          @media (max-width: 391px) {
-            .header .header_nav_logo_line_logo a {
-              padding-left: 5px; } }
+          @media (max-width: 976px) {
+            .header .header_nav_logo_line_logo a span {
+              display: none; } }
+          .header .header_nav_logo_line_logo a img {
+            display: none; }
+            @media (max-width: 976px) {
+              .header .header_nav_logo_line_logo a img {
+                display: block;
+                max-width: 100%; } }
           .header .header_nav_logo_line_logo a:before {
             content: '';
             display: block;
@@ -107,9 +135,9 @@
             height: 20px;
             background-image: url("../img/sprite_header.png");
             background-position: 0px -155px; }
-            @media (max-width: 391px) {
+            @media (max-width: 976px) {
               .header .header_nav_logo_line_logo a:before {
-                left: -5px; } }
+                display: none; } }
         .header .header_nav_logo_line_logo i {
           color: #ff0000; }
         .header .header_nav_logo_line_logo p {
@@ -117,13 +145,9 @@
           font: 16px/10px Verdana;
           font-weight: bold;
           padding-left: 15px; }
-          @media (max-width: 636px) {
+          @media (max-width: 976px) {
             .header .header_nav_logo_line_logo p {
-              font-size: 13px; } }
-          @media (max-width: 391px) {
-            .header .header_nav_logo_line_logo p {
-              font-size: 10px;
-              padding-left: 5px; } }
+              display: none; } }
           .header .header_nav_logo_line_logo p b {
             font-size: 11px; }
       .header .header_nav_logo_line_sity {
@@ -131,7 +155,7 @@
         font: 11px/40px Verdana;
         color: #363636;
         margin-top: 5px; }
-        @media (max-width: 886px) {
+        @media (max-width: 1009px) {
           .header .header_nav_logo_line_sity {
             display: none; } }
       .header .header_nav_logo_line_schem {
@@ -147,7 +171,7 @@
           text-shadow: -1px 3px 5px rgba(75, 75, 75, 0.52); }
         .header .header_nav_logo_line_schem span {
           text-decoration: underline; }
-        @media (max-width: 886px) {
+        @media (max-width: 1009px) {
           .header .header_nav_logo_line_schem {
             display: none; } }
     .header .header_nav_katalog_line {
@@ -158,7 +182,7 @@
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e0f5f5', endColorstr='#e8f9f8', GradientType=1);
       padding-bottom: 3px;
       float: left; }
-      @media (max-width: 898px) {
+      @media (max-width: 1009px) {
         .header .header_nav_katalog_line {
           display: none; } }
     .header .header_nav_katalog {
@@ -169,10 +193,6 @@
       background: #FFFFFF;
       padding-left: 3.31%;
       margin-top: 5px; }
-      @media (max-width: 880px) {
-        .header .header_nav_katalog {
-          border: none;
-          text-align: center; } }
       .header .header_nav_katalog_all {
         width: 100%;
         font: 11px/30px Verdana;
@@ -180,9 +200,6 @@
         color: #023d98; }
         .header .header_nav_katalog_all:hover {
           color: #620909; }
-        @media (max-width: 880px) {
-          .header .header_nav_katalog_all {
-            display: none; } }
       .header .header_nav_katalog .all_mini {
         display: none;
         float: left;
@@ -211,10 +228,6 @@
           height: 6px;
           background-image: url("../img/sprite_header.png");
           background-position: 0px -155px; }
-        @media (max-width: 880px) {
-          .header .header_nav_katalog .all_mini {
-            display: inline-block;
-            float: none; } }
       .header .header_nav_katalog_categories {
         width: 100%;
         min-height: 21px; }
@@ -242,9 +255,6 @@
             .header .header_nav_katalog_categories .button {
               padding: 0px;
               text-align: center; } }
-          @media (max-width: 880px) {
-            .header .header_nav_katalog_categories .button {
-              display: none; } }
           .header .header_nav_katalog_categories .button i {
             display: block;
             float: right;
@@ -254,9 +264,6 @@
             height: 6px;
             background-image: url("../img/sprite_header.png");
             background-position: -354px -70px; }
-            @media (max-width: 1070px) {
-              .header .header_nav_katalog_categories .button i {
-                display: none; } }
         .header .header_nav_katalog_categories .open i {
           background: url("../img/sprite_header.png");
           background-position: -354px -64px; }
@@ -268,14 +275,20 @@
     box-sizing: border-box; }
     @media (max-width: 1170px) {
       .header .header_kontakt {
-        width: 100%;
+        margin-left: 2%; } }
+    @media (max-width: 1009px) {
+      .header .header_kontakt {
+        float: right;
         margin-left: 0px;
-        margin-top: 10px; } }
+        width: 52%; } }
+    @media (max-width: 770px) {
+      .header .header_kontakt {
+        width: 100%; } }
     .header .header_kontakt_action {
       float: left;
       font: 12px/35px Verdana;
       color: #840000; }
-      @media (max-width: 1170px) {
+      @media (max-width: 1009px) {
         .header .header_kontakt_action {
           display: none; } }
       .header .header_kontakt_action li a {
@@ -291,52 +304,46 @@
       background: linear-gradient(to right, rgba(224, 245, 245, 0.2) 0%, rgba(224, 245, 245, 0.7) 50%, rgba(232, 249, 248, 0.2) 100%);
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e0f5f5', endColorstr='#e8f9f8', GradientType=1);
       float: left; }
-      @media (max-width: 1170px) {
+      @media (max-width: 1009px) {
         .header .header_kontakt_line {
-          width: 45%;
-          margin-left: 0px; } }
-      @media (max-width: 840px) {
-        .header .header_kontakt_line {
-          width: 100%;
           min-height: 0px;
-          background: none;
-          margin-bottom: 8px; } }
+          margin-top: 15px; } }
       .header .header_kontakt_line .meil {
         font: 14px/40px Verdana;
         color: #024753; }
-        @media (max-width: 1170px) {
-          .header .header_kontakt_line .meil {
-            float: right;
-            width: auto; } }
-        @media (max-width: 840px) {
+        @media (max-width: 1009px) {
           .header .header_kontakt_line .meil {
             display: block;
             width: 49%;
             padding: 0px 11px;
+            padding-left: 11px;
             color: #004191;
             border: 1px solid #004191;
             box-sizing: border-box;
             min-height: 48px;
             line-height: 20px;
-            text-align: left;
-            float: left; } }
-  @media (max-width: 840px) and (max-width: 423px) {
-    .header .header_kontakt_line .meil {
-      font-size: 13px;
-      letter-spacing: -1.2px; } }
+            float: right;
+            text-align: right;
+            max-width: 180px; } }
+        @media (max-width: 770px) {
+          .header .header_kontakt_line .meil {
+            max-width: 160px;
+            font-size: 11px; } }
+        @media (max-width: 355px) {
+          .header .header_kontakt_line .meil {
+            display: block;
+            margin: 5px auto;
+            float: none;
+            width: 160px; } }
         .header .header_kontakt_line .meil p {
           width: 100%;
           font: 13px/20px Verdana;
           font-weight: bold;
           color: #840000;
           display: none; }
-          @media (max-width: 964px) {
+          @media (max-width: 1009px) {
             .header .header_kontakt_line .meil p {
-              display: block; } }
-          @media (max-width: 423px) {
-            .header .header_kontakt_line .meil p {
-              font-size: 13px;
-              letter-spacing: normal; } }
+              display: inline-block; } }
         .header .header_kontakt_line .meil .icon-mail_header {
           display: inline-block;
           margin-top: 12px;
@@ -344,7 +351,7 @@
           background-position: -25px -122px;
           width: 24px;
           height: 16px; }
-          @media (max-width: 1015px) {
+          @media (max-width: 1009px) {
             .header .header_kontakt_line .meil .icon-mail_header {
               display: none; } }
       .header .header_kontakt_line .ring {
@@ -352,6 +359,31 @@
         font: 16px/25px Verdana;
         font-weight: bold;
         color: #840000; }
+        @media (max-width: 1009px) {
+          .header .header_kontakt_line .ring {
+            display: block;
+            width: 49%;
+            padding: 0px 11px;
+            padding-left: 11px;
+            color: #004191;
+            border: 1px solid #004191;
+            box-sizing: border-box;
+            min-height: 48px;
+            line-height: 20px;
+            float: left;
+            text-align: left;
+            max-width: 180px;
+            font-size: 15px; } }
+        @media (max-width: 770px) {
+          .header .header_kontakt_line .ring {
+            max-width: 160px;
+            font-size: 11px; } }
+        @media (max-width: 355px) {
+          .header .header_kontakt_line .ring {
+            display: block;
+            margin: 5px auto;
+            float: none;
+            width: 160px; } }
         .header .header_kontakt_line .ring:hover i {
           background: url("../img/temp_hover/arow_hover.png"); }
         .header .header_kontakt_line .ring i {
@@ -362,58 +394,23 @@
           background-position: -354px -70px;
           margin-top: 9.5px;
           margin-left: 10.1px; }
-          @media (max-width: 1070px) {
-            .header .header_kontakt_line .ring i {
-              display: none; } }
-        @media (max-width: 840px) {
-          .header .header_kontakt_line .ring {
-            display: block;
-            width: 49%;
-            padding: 0px 11px;
-            color: #004191;
-            border: 1px solid #004191;
-            box-sizing: border-box;
-            min-height: 48px;
-            line-height: 20px;
-            float: right;
-            text-align: right; } }
-        @media (max-width: 423px) {
-          .header .header_kontakt_line .ring {
-            font-size: 13px;
-            letter-spacing: -1.3px;
-            padding-left: 0px; }
+          @media (max-width: 1009px) {
             .header .header_kontakt_line .ring i {
               display: none; } }
         .header .header_kontakt_line .ring p {
           font: 13px/20px Verdana;
           font-weight: bold;
           color: #363636; }
-          @media (max-width: 840px) {
-            .header .header_kontakt_line .ring p {
-              color: #840000; } }
-          @media (max-width: 423px) {
-            .header .header_kontakt_line .ring p {
-              letter-spacing: normal; } }
           .header .header_kontakt_line .ring p span {
             display: none; }
-            @media (max-width: 840px) {
-              .header .header_kontakt_line .ring p span {
-                display: inline; } }
         .header .header_kontakt_line .ring span {
           font-size: 13px;
           font-weight: normal; }
-          @media (max-width: 423px) {
-            .header .header_kontakt_line .ring span {
-              font-weight: bold; } }
       .header .header_kontakt_line_button_line {
         width: 100%;
         padding-bottom: 3px;
         float: left; }
-        @media (max-width: 1170px) {
-          .header .header_kontakt_line_button_line {
-            float: right;
-            width: 45%; } }
-        @media (max-width: 840px) {
+        @media (max-width: 1009px) {
           .header .header_kontakt_line_button_line {
             display: none; } }
         .header .header_kontakt_line_button_line .button {
@@ -443,10 +440,25 @@
     width: 34.18%; }
     @media (max-width: 1170px) {
       .header__user_info {
-        width: 45%; } }
+        width: 40%; } }
+    @media (max-width: 1009px) {
+      .header__user_info {
+        float: left;
+        width: 25%;
+        text-align: right; } }
+    @media (max-width: 770px) {
+      .header__user_info {
+        width: 50%; } }
+    @media (max-width: 355px) {
+      .header__user_info {
+        width: 100%;
+        text-align: center; } }
     .header__user_info_product_line {
       width: 100%;
       float: left; }
+      @media (max-width: 1009px) {
+        .header__user_info_product_line {
+          display: none; } }
       .header__user_info_product_line .compare {
         float: left;
         font: 13px/35px 'Georgia-Italic';
@@ -462,9 +474,6 @@
           background-position: -255px -64px;
           width: 31px;
           height: 27px; }
-        @media (max-width: 636px) {
-          .header__user_info_product_line .compare {
-            display: none; } }
         .header__user_info_product_line .compare a {
           text-decoration: underline; }
         .header__user_info_product_line .compare span {
@@ -510,12 +519,16 @@
       background: linear-gradient(to right, rgba(224, 245, 245, 0.2) 0%, rgba(224, 245, 245, 0.7) 50%, rgba(232, 249, 248, 0.2) 100%);
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e0f5f5', endColorstr='#e8f9f8', GradientType=1);
       float: left; }
-      @media (max-width: 568px) {
-        .header__user_info_info {
-          background: none; } }
       .header__user_info_info .time {
         float: left;
         margin-top: 12px; }
+        @media (max-width: 1009px) {
+          .header__user_info_info .time {
+            float: right; } }
+        @media (max-width: 355px) {
+          .header__user_info_info .time {
+            display: inline-block;
+            float: none; } }
         .header__user_info_info .time .icon {
           display: inline-block;
           width: 59px;
@@ -523,7 +536,7 @@
           background-image: url("../img/sprite_header.png");
           background-position: 0px -64px;
           float: left; }
-          @media (max-width: 752px) {
+          @media (max-width: 1009px) {
             .header__user_info_info .time .icon {
               display: none; } }
         .header__user_info_info .time_text {
@@ -549,6 +562,9 @@
             text-align: left;
             margin-left: 10px;
             cursor: pointer; }
+            @media (max-width: 1009px) {
+              .header__user_info_info .time_text h3 {
+                text-align: right; } }
             .header__user_info_info .time_text h3:hover {
               color: #074e23;
               text-shadow: -1px 3px 5px rgba(75, 75, 75, 0.52); }
@@ -562,7 +578,7 @@
         position: relative;
         width: 128px;
         height: 32px; }
-        @media (max-width: 636px) {
+        @media (max-width: 1009px) {
           .header__user_info_info_serch {
             display: none; } }
         .header__user_info_info_serch_input {
@@ -593,7 +609,7 @@
         color: #024753;
         text-decoration: underline;
         float: left; }
-        @media (max-width: 636px) {
+        @media (max-width: 1009px) {
           .header__user_info_info_check {
             display: none; } }
       .header__user_info_info_select_line {
@@ -606,10 +622,7 @@
         background: linear-gradient(to right, rgba(224, 245, 245, 0.2) 0%, rgba(224, 245, 245, 0.7) 50%, rgba(232, 249, 248, 0.2) 100%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e0f5f5', endColorstr='#e8f9f8', GradientType=1);
         padding-top: 20px; }
-        @media (max-width: 1170px) {
-          .header__user_info_info_select_line {
-            padding-top: 30px; } }
-        @media (max-width: 898px) {
+        @media (max-width: 1009px) {
           .header__user_info_info_select_line {
             display: none; } }
         .header__user_info_info_select_line_select {
@@ -626,6 +639,9 @@
           box-sizing: border-box;
           margin-right: 7px;
           text-align: center; }
+          @media (max-width: 1134px) {
+            .header__user_info_info_select_line_select {
+              width: 110px; } }
           .header__user_info_info_select_line_select:hover {
             color: #074e23;
             border-color: #620909; }
@@ -662,13 +678,6 @@
   .header_mini .header_nav {
     width: 35.5%;
     float: left; }
-    @media (max-width: 1106px) {
-      .header_mini .header_nav {
-        width: 50%; } }
-    @media (max-width: 636px) {
-      .header_mini .header_nav {
-        width: 100%;
-        margin-left: 0px; } }
     .header_mini .header_nav nav {
       display: none; }
     .header_mini .header_nav .header_nav_sandwich {
@@ -721,6 +730,8 @@
       width: auto;
       float: left;
       background: none; }
+      .header_mini .header_nav .header_nav_logo_line img {
+        display: none; }
       @media (max-width: 405px) {
         .header_mini .header_nav .header_nav_logo_line {
           float: left; }
